ListView: fix random crashes when accessing deleted objects

These crashes occur randomly with tst_combobox from qtquickcontrols2,
and with the test case attached to the linked bug report.

Change-Id: If7d91045f86ec33e7fe398ed02f3edf80700651a
Task-number: QTBUG-48277
Reviewed-by: Nikita Krupenko <krnekit@gmail.com>
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>